首页 + 产品页 - init commit

--- a/bootstrap/css/bootswatch.less
+++ b/bootstrap/css/bootswatch.less
@@ -387,7 +387,7 @@ a.thumbnail {
   overflow: hidden;
 }
 
-:hover,
+a.thumbnail:hover,
 a.thumbnail:focus,
 a.thumbnail.active {
   border-color: @thumbnail-border;
