--- a/bootstrap/css/_variables.scss
+++ b/bootstrap/css/_variables.scss
@@ -16,10 +16,10 @@ $gray-light:             #7A8288 !default;   // #999
 $gray-lighter:           #999 !default; // #eee
 
 $brand-primary:         $gray-light !default;
-$brand-success:         #62c462 !default;
-$brand-info:            #5bc0de !default;
-$brand-warning:         #f89406 !default;
-$brand-danger:          #ee5f5b !default;
+$brand-success:         #00bc8c !default;
+$brand-info:            #3498DB !default;
+$brand-warning:         #F39C12 !default;
+$brand-danger:          #E74C3C !default;
 
 
 //== Scaffolding
