--- a/bootstrap/css/variables.less
+++ b/bootstrap/css/variables.less
@@ -15,10 +15,10 @@
 @gray-lighter:           #999; // #eee
 
 @brand-primary:         @gray-light;
-@brand-success:         #62c462;
-@brand-info:            #5bc0de;
-@brand-warning:         #f89406;
-@brand-danger:          #ee5f5b;
+@brand-success:         #00bc8c;
+@brand-info:            #3498DB;
+@brand-warning:         #F39C12;
+@brand-danger:          #E74C3C;
 
 
 //== Scaffolding
