移动端初步适配 - logo 适配

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -9,10 +9,11 @@
 
     .global-header {
         .navbar-brand {
-            width: 100%;
+            width: auto;
             height: auto;
             img {
-                width: 100%;
+                width: auto;
+                height: 34px;
             }
         }
     }
@@ -24,7 +25,7 @@
                 .media-left {
                     display: block;
                 }
-                .media-body{
+                .media-body {
 
                 }
             }
