移动端初步适配 - logo 适配

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -8,6 +8,9 @@
 @media (max-width: 767px) {
 
     .global-header {
+        .navbar-toggle {
+            padding: 15px;
+        }
         .navbar-brand {
             width: auto;
             height: auto;
