移动端初步适配 - 底部适配

--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -44,7 +44,7 @@
             }
         }
         .col-md-8 {
-            a, span {
+            * {
                 display: block;
                 text-align: center;
                 line-height: 2;
