--- a/styles/main.scss
+++ b/styles/main.scss
@@ -144,6 +144,7 @@ select.form-control {
     border-top: 5px solid $primary-color;
     height: 210px;
     background: url("../images/footer-bg.jpg") no-repeat center top;
+    background-size: cover;
     color: #fff;
 }
 
